# log_trimmer

./: .gitignore  Cargo.toml
benches/: filter_bench.rs
src/: filter.rs  main.rs
