[package]
name = "log_trimmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
eframe = "0.19"
rfd = "0.10.0"
linereader = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filter_bench"
harness = false
html_reports = true

[profile.release]
lto = false
